@@ -48,7 +48,8 @@ Test_i::request (
               counter));
 
   const char* follow_up_str;
-  switch (ACE_OS::rand_r (reinterpret_cast<unsigned int*> (&this->seed_)) % 2)
+  unsigned int* p_seed = reinterpret_cast<unsigned int*> (&this->seed_);
+  switch (ACE_OS::rand_r (p_seed) % 2)
   {
   case 0:
     follow_up = (reqmode == A::RQM_SYNCH ? A::FU_TIMER : A::FU_NOTIFICATION);
@@ -185,7 +186,8 @@ TestHandler::handle_timeout (const ACE_Time_Value &,
                             const void *)
 {
   this->orb_->orb_core ()->reactor ()->cancel_timer (this);
-  if ((ACE_OS::rand_r (reinterpret_cast<unsigned int*> (&this->seed_)) % 2) == 0)
+  unsigned int* p_seed = reinterpret_cast<unsigned int*> (&this->seed_);
+  if ((ACE_OS::rand_r (p_seed) % 2) == 0)
   {
     A::FollowUp followup;
     if (!CORBA::is_nil (this->opponent_))
@@ -207,7 +209,8 @@ TestHandler::handle_timeout (const ACE_Time_Value &,
 int
 TestHandler::handle_exception (ACE_HANDLE)
 {
-  if ((ACE_OS::rand_r (reinterpret_cast<unsigned int*> (&this->seed_)) % 2) == 0)
+  unsigned int* p_seed = reinterpret_cast<unsigned int*> (&this->seed_);
+  if ((ACE_OS::rand_r (p_seed) % 2) == 0)
   {
     A::FollowUp followup;
     if (!CORBA::is_nil (this->opponent_))
